--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,21 @@
 *.lai
 *.la
 *.a
+
+BuildLog.htm
+*.dep
+*.manifest
+*.ilk
+*.obj
+*.pdb
+*.exe
+*.idb
+*.ncb
+*.manifest.res
+*.suo
+*.user
+*.sdf
+*.tlog
+*.lastbuildstate
+*.log
+*nativecodeanalysis*.*
