--- a/src/harvester_lib/harvester_lib.vcxproj.filters
+++ b/src/harvester_lib/harvester_lib.vcxproj.filters
@@ -15,28 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="harvester.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="code_scanner.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="make_code_record.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="harvester_program_options.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="code_scanner.h">
+    <ClInclude Include="comment_stripper_winpsdk.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="make_code_record.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="harvester_program_options.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="comment_stripper_winpsdk.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
