moved main logic into harvester_lib

--- a/src/harvester_lib/harvester_lib.vcxproj.filters
+++ b/src/harvester_lib/harvester_lib.vcxproj.filters
@@ -21,9 +21,24 @@
     <ClInclude Include="comment_stripper_winpsdk.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="harvester_lib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="code_scanner.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="make_code_record.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="comment_stripper_winpsdk.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="code_scanner.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="make_code_record.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
