--- a/src/harvester_test/harvester_test.vcxproj.filters
+++ b/src/harvester_test/harvester_test.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="comment_stripper_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="code_scanner_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\harvester\comment_stripper_winpsdk.h">
